<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- sign_up_ strings -->

	<string name="app_name">Design Customers </string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="daftar_string">Daftar</string>
	<string name="selamat_datang_di_aplikasi_krislammenu__untuk_masuk_silahkan_daftar_dan_mengisi_data_kamu_terlebih_dahulu_ya__string">Selamat Datang di Aplikasi KrislamMenu, Untuk Masuk silahkan Daftar dan mengisi data kamu terlebih dahulu ya!</string>
	<string name="button_ek2_string">Daftar</string>
	<string name="sudah_punya_akun__string">Sudah punya akun?</string>
	<string name="masuk_string">Masuk</string>

	<string name="_2_ek5_string">2</string>
	<string name="_3_string">3</string>
	<string name="berapa_nomor_ponselmu__string">Berapa nomor ponselmu?</string>
	<string name="button_ek2_string1">Selanjutnya</string>
	<string name="_5_13_string">5:13</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
	<string name="btn_onboarding_berikutnya">Berikutnya</string>
	<string name="btn_onboardingLast_Mulai">Mulai Sekarang!</string>
	<string name="textView_gotoDaftar_daftar">Daftar</string>
	<string name="belum_punya_akun">Belum punya akun?</string>
	<string name="masuk">Masuk</string>
	<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="menu">Menu</string>
	<string name="keranjang">Keranjang</string>
	<string name="pemesanan">Pemesanan</string>
	<string name="profile">Profile</string>
	<string name="beranda">Beranda</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
	<string name="lewati_1">Lewati</string>
	<string name="selamat_datang_di_krislam_cafe">Selamat datang di Krislam Cafe!</string>
	<string name="temukan_beragam_hidangan_lezat_dan_kenyamanan_dalam_genggaman_anda_dengan_krislammenu_nikmati_juga_berbagai_diskon_eksklusif_yang_membuat_pengalaman_kuliner_anda_semakin_memuaskan">Temukan beragam hidangan lezat dan kenyamanan dalam genggaman Anda dengan KrislamMenu! Nikmati juga berbagai diskon eksklusif yang membuat pengalaman kuliner Anda semakin memuaskan.</string>
	<string name="jelajahi_menu_krislam_dengan_mudah">Jelajahi Menu Krislam dengan Mudah</string>
	<string name="nikmati_kemudahan_menjelajahi_menu_krislam_dan_pilihlah_hidangan_favorit_anda_termasuk_menu_best_seller_rekomendasi_dari_cafe_kami_dengan_krislammenu_mulai_petualangan_kuliner_anda_sekarang">Nikmati kemudahan menjelajahi menu Krislam dan pilihlah hidangan favorit Anda, termasuk menu best seller/rekomendasi dari cafe kami, dengan KrislamMenu. Mulai petualangan kuliner Anda sekarang!</string>
	<string name="hemat_lebih_banyak_dengan_krislammenu">Hemat Lebih Banyak dengan KrislamMenu!</string>
	<string name="selamat_datang_di_krislammenu_untuk_masuk_silahkan_isi_data_kamu_terlebih_dahulu_ya">Selamat Datang di KrislamMenu, Untuk masuk silahkan isi data kamu terlebih dahulu ya!</string>
    <string name="nikmati_diskon_lebih_banyak_di_krislammenu_temukan_penawaran_istimewa_dan_diskon_eksklusif_saat_anda_jelajahi_krislammenu_mulai_hemat_dan_puaskan_selera_anda_sekarang">Nikmati Diskon Lebih Banyak di KrislamMenu! Temukan penawaran istimewa dan diskon eksklusif saat Anda jelajahi KrislamMenu. Mulai hemat dan puaskan selera Anda sekarang!</string>
</resources>