<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="#FFFFFFFF"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<ScrollView 
		android:fillViewport="true"
		android:id="@+id/rwcrz8go0n6f"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:background="#FFFFFFFF"
		android:paddingBottom="19dp"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/r7ha23d4fgsq"
				android:layout_width="100dp"
				android:layout_height="45dp"
				android:gravity="center_horizontal"
				android:background="@drawable/sff0085ffsw1cr8"
				android:paddingVertical="15dp"
				android:layout_marginHorizontal="22dp"
				android:layout_margin="15dp"
				android:layout_marginBottom="15dp"
				android:elevation="16dp"
				android:orientation="vertical">
				<TextView
					android:id="@+id/rx6r5q5h46mj"
					android:textColor="#0085FF"
					android:textSize="14sp"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/lewati_1"
				/>
			</LinearLayout>
			<ImageView
				android:id="@+id/rvitmuiuq43"
				android:layout_width="match_parent"
				android:layout_height="260dp"
				android:layout_marginBottom="49dp"
				android:src="@drawable/onboarding_page3"
				android:scaleType="fitXY"
			/>
			<TextView
				android:id="@+id/r59tyjz616g"
				android:textColor="#000000"
				android:textSize="28sp"
				android:layout_marginBottom="37dp"
				android:layout_marginHorizontal="67dp"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:layout_weight="1"
				android:text="@string/hemat_lebih_banyak_dengan_krislammenu"
			/>
			<TextView
				android:id="@+id/rlh3uw18vuol"
				android:textColor="#000000"
				android:textSize="12sp"
				android:layout_marginBottom="69dp"
				android:layout_marginHorizontal="35dp"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:layout_weight="1"
				android:text="@string/nikmati_diskon_lebih_banyak_di_krislammenu_temukan_penawaran_istimewa_dan_diskon_eksklusif_saat_anda_jelajahi_krislammenu_mulai_hemat_dan_puaskan_selera_anda_sekarang"
			/>

			<Button
				android:id="@+id/button_page3_next"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:background="@drawable/cr8bff0085ff"
				android:paddingVertical="14dp"
				android:layout_marginHorizontal="20dp"
				android:elevation="16dp"
				android:orientation="vertical"
				android:text="@string/btn_onboardingLast_Mulai" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
