<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="#FFFFFFFF"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<ScrollView 
		android:fillViewport="true"
		android:id="@+id/ro0090qibrlt"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:background="#FFFFFFFF"
		android:paddingBottom="19dp"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/rmhbgqtso59"
				android:layout_width="100dp"
				android:layout_height="45dp"
				android:gravity="center_horizontal"
				android:background="@drawable/sff0085ffsw1cr8"
				android:paddingVertical="15dp"
				android:layout_marginHorizontal="22dp"
				android:layout_margin="15dp"
				android:layout_marginBottom="15dp"
				android:elevation="16dp"
				android:orientation="vertical">
				<TextView
					android:id="@+id/rvkpvhw2v11r"
					android:textColor="#0085FF"
					android:textSize="14sp"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/lewati_1"
				/>
			</LinearLayout>
			<ImageView
				android:id="@+id/rub4x9zpd1cd"
				android:layout_width="match_parent"
				android:layout_height="277dp"
				android:layout_marginBottom="38dp"
				android:src="@drawable/onboarding_page2"
				android:scaleType="fitXY"
			/>
			<TextView
				android:id="@+id/rxwofludfnza"
				android:textColor="#000000"
				android:textSize="28sp"
				android:layout_marginBottom="33dp"
				android:layout_marginHorizontal="62dp"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:layout_weight="1"
				android:text="@string/jelajahi_menu_krislam_dengan_mudah"
			/>
			<TextView
				android:id="@+id/ruy1mi72k35s"
				android:textColor="#000000"
				android:textSize="12sp"
				android:layout_marginBottom="44dp"
				android:layout_marginHorizontal="26dp"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:layout_weight="1"
				android:text="@string/nikmati_kemudahan_menjelajahi_menu_krislam_dan_pilihlah_hidangan_favorit_anda_termasuk_menu_best_seller_rekomendasi_dari_cafe_kami_dengan_krislammenu_mulai_petualangan_kuliner_anda_sekarang"
			/>

			<Button
				android:id="@+id/button_page2_next"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:background="@drawable/cr8bff0085ff"
				android:paddingVertical="14dp"
				android:layout_marginHorizontal="20dp"
				android:elevation="16dp"
				android:orientation="vertical"
				android:text="@string/btn_onboarding_berikutnya" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
