<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="#FFFFFFFF"
	android:clipChildren="false"
	android:clipToPadding="false"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<ScrollView 
		android:fillViewport="true"
		android:id="@+id/r3r0h5o6mqm3"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:background="#FFFFFFFF"
		android:paddingBottom="162dp"
		android:clipChildren="false"
		android:clipToPadding="false">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clipChildren="false"
			android:clipToPadding="false"
			android:orientation="vertical">
			<LinearLayout
				android:id="@+id/rdjlm4nf6kdl"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:background="@drawable/cr8bffffffff"
				android:paddingVertical="5dp"
				android:paddingHorizontal="16dp"
				android:layout_marginBottom="17dp"
				android:orientation="horizontal"/>

			<ImageView
				android:id="@+id/rg53wp9u9j8e"
				android:layout_width="match_parent"
				android:layout_height="300dp"
				android:layout_marginHorizontal="30dp"
				android:layout_marginBottom="23dp"
				android:scaleType="fitXY"
				android:src="@drawable/login_1" />

			<TextView
				android:id="@+id/rhh0buty9d4u"
				android:textColor="#0085FF"
				android:textSize="32sp"
				android:layout_marginBottom="5dp"
				android:layout_marginHorizontal="22dp"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/masuk"
			/>
			<TextView
				android:id="@+id/r66w18cajhz7"
				android:textColor="#002C55"
				android:textSize="10sp"
				android:layout_marginBottom="18dp"
				android:layout_marginHorizontal="20dp"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:layout_weight="1"
				android:text="@string/selamat_datang_di_krislammenu_untuk_masuk_silahkan_isi_data_kamu_terlebih_dahulu_ya"
			/>
			<RelativeLayout
				android:id="@+id/recs4k2auz34"
				android:layout_width="12dp"
				android:layout_height="8dp"
				android:layout_marginHorizontal="21dp"
				android:clipChildren="false"
				android:clipToPadding="false"
				>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:clipChildren="false"
					android:clipToPadding="false"
					android:orientation="vertical">
					<LinearLayout
						android:id="@+id/rjjvy9hpkrxa"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@drawable/tl8"
						android:orientation="vertical">
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/roctxp42orcr"
					android:layout_marginBottom="0dp"
					android:layout_marginEnd="-305dp"
					android:layout_alignParentBottom="true"
					android:layout_alignParentRight="true"
					android:layout_width="305dp"
					android:layout_height="8dp"
					android:background="@drawable/tr8"
					android:clipChildren="false"
					android:clipToPadding="false"
					android:orientation="vertical">
				</LinearLayout>
			</RelativeLayout>
			<LinearLayout
				android:id="@+id/rlgt3s9dootp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:background="@drawable/br8bl8"
				android:paddingHorizontal="16dp"
				android:layout_marginBottom="10dp"
				android:layout_marginHorizontal="21dp"
				android:clipChildren="false"
				android:clipToPadding="false"
				android:orientation="horizontal">
				<ImageView
					android:id="@+id/rc1gna212787"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:layout_marginEnd="9dp"
					android:src="@drawable/person"
					android:scaleType="fitXY"
				/>
				<TextView
					android:id="@+id/r0bhccfi6i8b"
					android:textColor="#636363"
					android:textSize="14sp"
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:layout_weight="1"
					android:text="@string/email"
				/>
			</LinearLayout>
			<RelativeLayout
				android:id="@+id/rex8p8vc5a7"
				android:layout_width="12dp"
				android:layout_height="8dp"
				android:layout_marginHorizontal="21dp"
				android:clipChildren="false"
				android:clipToPadding="false"
				>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:clipChildren="false"
					android:clipToPadding="false"
					android:orientation="vertical">
					<LinearLayout
						android:id="@+id/r6shv2g1rfdt"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@drawable/tl8"
						android:clipChildren="false"
						android:clipToPadding="false"
						android:orientation="vertical">
					</LinearLayout>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/rp6kq2gh31d"
					android:layout_marginBottom="0dp"
					android:layout_marginEnd="-305dp"
					android:layout_alignParentBottom="true"
					android:layout_alignParentRight="true"
					android:layout_width="305dp"
					android:layout_height="8dp"
					android:background="@drawable/tr8"
					android:clipChildren="false"
					android:clipToPadding="false"
					android:orientation="vertical">
				</LinearLayout>
			</RelativeLayout>
			<LinearLayout
				android:id="@+id/rlhhy9ldsb9"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:background="@drawable/br8bl8"
				android:paddingHorizontal="16dp"
				android:layout_marginBottom="12dp"
				android:layout_marginHorizontal="21dp"
				android:clipChildren="false"
				android:clipToPadding="false"
				android:orientation="horizontal">
				<ImageView
					android:id="@+id/rhf67th73667"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:layout_marginEnd="9dp"
					android:src="@drawable/gembok"
					android:scaleType="fitXY"
				/>
				<TextView
					android:id="@+id/r5pdik8p0cxm"
					android:textColor="#636363"
					android:textSize="14sp"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/password"
				/>
				<LinearLayout
					android:id="@+id/rda2snk3r69t"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:clipChildren="false"
					android:clipToPadding="false"
					android:orientation="vertical">
				</LinearLayout>
				<ImageView
					android:id="@+id/rmc955tedcw"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:src="@drawable/mata_privasi"
					android:scaleType="fitXY"
				/>
			</LinearLayout>

			<TextView
				android:id="@+id/rpjosxsduas"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="22dp"
				android:layout_marginBottom="16dp"
				android:text="@string/lupa_kata_sandi"
				android:textColor="#006ED4"
				android:textSize="10sp" />

			<Button
				android:id="@+id/button_FragBeranda_next"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:background="@drawable/cr8bff0085ff"
				android:paddingVertical="15dp"
				android:layout_marginBottom="19dp"
				android:layout_marginHorizontal="20dp"
				android:elevation="16dp"
				android:clipChildren="false"
				android:clipToPadding="false"
				android:orientation="vertical"
				android:text="@string/masuk" />


			<LinearLayout
				android:id="@+id/rzprgi51338a"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:layout_marginHorizontal="98dp"
				android:clipChildren="false"
				android:clipToPadding="false"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/rm6x3vc50smp"
					android:textColor="#959595"
					android:textSize="12sp"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/belum_punya_akun"
				/>
				<View
					android:layout_width="0dp"
					android:layout_height="0dp"
					android:layout_weight="1"
				 />
				<TextView
					android:id="@+id/textViewDaftar"
					android:textColor="#0085FF"
					android:textSize="12sp"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/textView_gotoDaftar_daftar"
				/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
